--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MovieDB</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_movie">Title Movie</string>
+    <string name="subtitle_movie">Subtitle Movie</string>
+    <string name="description_movie">Description Movie</string>
 </resources>
