--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="movie_title">Movie Title</string>
     <string name="sinkronisas_no_data_offline">No Data Offline</string>
     <string name="no_data">Tidak Ada Data</string>
+    <string name="menu_search_here">Search Here</string>
+    <string name="detail_movie">Detail Movie</string>
 </resources>
